--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   "homepage": "https://github.com/Laurent155/Japanese-learning#readme",
   "dependencies": {
     "chalk": "^4.1.1",
+    "cookie-parser": "^1.4.6",
     "debug": "^4.3.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "nodemonConfig": {
     "restartable": "rs",
