--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
   "name": "japanese-learning",
   "version": "1.0.0",
-  "description": "A site to help practice hiragana/ katakana and more",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set DEBUG=app & nodemon app.js",
-    "debug": "set DEBUG=* & node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Laurent155/Japanese-learning.git"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Laurent155/Japanese-learning/issues"
-  },
-  "homepage": "https://github.com/Laurent155/Japanese-learning#readme",
   "dependencies": {
-    "chalk": "^4.1.1",
     "cookie-parser": "^1.4.6",
-    "debug": "^4.3.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongodb": "^3.6.6",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
