--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-google-oauth2": "^0.2.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.4.1"
   },
   "nodemonConfig": {
     "restartable": "rs",
